# Invasion-of-the-shapes

./: .clang-format  .gitignore  CMakeLists.txt  Invasion of the Shapes.code-workspace  Invasion of the Shapes.sln  Invasion of the Shapes.vcxproj  Invasion of the Shapes.vcxproj.filters  build-d.sh  build-r.sh  build.sh  config.json
Invasion.04996fc0/x64/Release/: Invasion of the Shapes.exe.recipe
assets/textures/enemies/aseprite/: runner.ase
assets/textures/player/Aseprite/: player.ase
assets/textures/projectiles/bullet/aseprite/: bullet.ase
dependencies/jsoncpp/include/json/: config.h  value.h
src/: CMakeLists.txt  bullet.cpp  bullet_manager.cpp  bullet_manager.hpp  enemy.cpp  enemy.hpp  enemy_manager.cpp  enemy_manager.hpp  event.hpp  game.cpp  game.hpp  game_over_scene.cpp  game_over_scene.hpp  game_scene.cpp  game_scene.hpp  main.cpp  obsever.hpp  player.cpp  player.hpp  puase_scene.cpp  puase_scene.hpp  scene.hpp  title_scene.cpp  title_scene.hpp  utils.hpp
src/Bullet/: Bullet.cpp  Bullet.hpp
src/Core/AssetManager/: AssetManager.cpp  AssetManager.hpp
src/Core/BulletManager/: BulletManager.cpp  BulletManager.hpp
src/Core/Config/: Config.cpp  Config.hpp
src/Core/EnemyManager/: EnemyManager.cpp  EnemyManager.hpp
src/Core/Game/: Game.cpp  Game.hpp
src/Enemy/: Enemy.hpp
src/Enemy/Runner/: Runner.cpp  Runner.hpp
src/Enemy/Shooter/: Shooter.cpp  Shooter.hpp
src/Player/: Player.cpp  Player.hpp
src/Scenes/: Scene.hpp
src/Scenes/GameOverScene/: GameOverScene.cpp  GameOverScene.hpp
src/Scenes/GameScene/: GameScene.cpp  GameScene.hpp
src/Scenes/PauseScene/: PauseScene.cpp  PauseScene.hpp
src/Scenes/TitleScene/: TitleScene.cpp  TitleScene.hpp
src/Utils/: utils.hpp
src/asset_manager/: CMakeLists.txt  asset_manager.cpp  asset_manager.h
src/bullet_manager/: CMakeLists.txt  bullet.cpp  bullet.hpp  bullet_manager.cpp  bullet_manager.hpp
src/config/: CMakeLists.txt  config.cpp  config.h
src/enemy/: CMakeLists.txt  enemy.h  enemy.hpp  runner.cpp  runner.hpp  shooter.cpp  shooter.hpp
src/enemy/dasher/: dasher.cpp  dasher.h
src/enemy/runner/: runner.cpp  runner.h
src/enemy/shooter/: shooter.cpp  shooter.hpp
src/enemy_manager/: CMakeLists.txt  enemy.cpp  enemy.hpp  enemy_manager.cpp  enemy_manager.h  enemy_manager.hpp
src/game/: CMakeLists.txt  game.cpp  game.hpp
src/game_files/: config.json
src/particles/: enemy_child.h  enemy_child_spawner.h  particle_spawner.h  particle_spawners.h  particles.h
src/particles/particle_spawners/: enemy_child_spawner.h  player_trail_spawner.cpp  player_trail_spawner.h
src/particles/particles/: enemy_child.h
src/player/: CMakeLists.txt  player.cpp  player.hpp
src/scenes/: CMakeLists.txt  game_over_scene.cpp  game_over_scene.hpp  game_scene.cpp  game_scene.hpp  puase_scene.cpp  puase_scene.hpp  scene.hpp  title_scene.cpp  title_scene.hpp
src/spawner/: CMakeLists.txt  spawner.cpp  spawner.hpp
src/spawners/: spawner.h
src/spawners/runner/: runner_spawner.cpp  runner_spawner.h
src/utils/: CMakeLists.txt  state.h  utils.hpp
src/utils/bullet/: bullet.cpp  bullet.hpp
