add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/asset_manager")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/bullet_manager")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/config")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/enemy")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/game")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/enemy_manager")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/player")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/scenes")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/spawner")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/utils")